--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,16 +7,14 @@
 </head>
 <body>
   <h1>🌍🧊👑 ICE KING DASHBOARD</h1>
-  <div class="container">
-    <div id="balance" class="card">Loading balance…</div>
-    <div id="orders"  class="card">Loading orders…</div>
-    <div id="fills"   class="card">Loading fills / PnL…</div>
-  </div>
-  <canvas id="chart" width="600" height="200"></canvas>
+  <div id="balance" class="card">Loading balance…</div>
+  <div id="orders"  class="card">Loading orders…</div>
+  <div id="fills"   class="card">Loading fills / PnL…</div>
+  <canvas id="chart" width="800" height="300"></canvas>
 
-  <!-- Chart.js CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <!-- Your app logic -->
+  <!-- 1) Chart.js UMD bundle from CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+  <!-- 2) Your app logic -->
   <script src="js/app.js"></script>
 </body>
 </html>
