--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,15 +4,17 @@
   <meta charset="UTF-8" />
   <title>🌍🧊👑 ICE KING DASHBOARD</title>
   <link rel="stylesheet" href="css/style.css">
-  <script src="https://s3.tradingview.com/tv.js"></script>
 </head>
 <body>
   <h1>🌍🧊👑 ICE KING DASHBOARD</h1>
   <div id="balance" class="card">Loading balance…</div>
-  <div id="orders" class="card">Loading positions…</div>
-  <div id="fills" class="card">Loading PnL…</div>
-  <div id="tv_chart_container" class="card" style="height: 400px;"></div>
+  <div id="orders" class="card">Loading orders…</div>
+  <div id="fills" class="card">Loading fills / PnL…</div>
+  <canvas id="chart" width="600" height="200"></canvas>
 
+  <!-- load Chart.js first -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4"></script>
+  <!-- then your app logic -->
   <script src="js/app.js"></script>
 </body>
 </html>
